force-app/main/default/objects/Pharmacy_Requisition__c/Pharmacy_Requisition__c.object-meta.xml
<CustomObject>
    <label>Pharmacy Requisition</label>
    <nameField>
        <label>Pharmacy Requisition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy Requisition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>