force-app/main/default/objects/Pharmacy_Requisition__c/fields/Medicine_Name__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Name__c</fullName>
    <label>Medicine Name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>