force-app/main/default/objects/Pharmacy_Requisition__c/fields/Surgery_Linked__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Linked__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgery Linked</label>
    <referenceTo>Surgery__c</referenceTo>
    <relationshipLabel>Pharmacy Requisition</relationshipLabel>
    <relationshipName>Pharmacy_Requisition</relationshipName>
    <type>Lookup</type>
</CustomField>