force-app/main/default/objects/Pharmacy_Requisition__c/validationRules/Quantity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than 0.</errorMessage>
</ValidationRule>